<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.VerPatrimonioActivity">

    <!-- TODO (26) Altere o visual desta tela adicionando elementos de estilo -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtShowId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTitleCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/categoria"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtShowCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NOTEBOOK"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTitleEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/estado"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtShowEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DESCARTE"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTitleMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/marca"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtShowMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Asus"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTitleValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtShowValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1897.52"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTitleDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/descricao"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtShowDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum fasis yumani"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImgShowList"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>